# PDF_Split_Rotate_Select_Save

./: .codex-commitmsg-1.txt  .dockerignore  .git-commit-message-cleanup.txt  .git-commit-message.txt  .gitignore  COMMIT_MSG.txt  README.ko.md  README.md  REMOVE_MSG.txt  REMOVE_MSG2.txt  REMOVE_MSG3.txt  core  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.claude/: settings.local.json
.cursor/rules/: dev-server-policy.mdc
e2e/: README.md  app.smoke.spec.ts
scripts/: clean-build.js  generate-e2e-fixtures.mjs  release.mjs  tauri-wrapper.mjs
scripts/docker/: linux-builder.Dockerfile
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: ai-helpers.ts  app-helpers.ts  app-runtime-utils.ts  app-shortcut-labels.ts  app-view-helpers.tsx  app-view-utils.ts  settings-store.ts  workspace-tabs.ts
src/components/: AddPdfModal.tsx  AiChatPanel.tsx  MergePdfModal.tsx  PdfInfoModal.tsx  PdfSecurityModal.tsx  SidebarPanel.tsx  WorkspaceTabStrip.tsx  useModalEscapeClose.ts
